@@ -1,5 +1,5 @@
 /*
- * "$Id: htmllib.cxx,v 1.41.2.70 2004/03/02 15:39:51 mike Exp $"
+ * "$Id: htmllib.cxx,v 1.41.2.71 2004/04/15 19:58:20 mike Exp $"
  *
  *   HTML parsing routines for HTMLDOC, a HTML document processing program.
  *
@@ -2964,6 +2964,97 @@ htmlDebugStats(const char *title,	// I - Title
 }
 
 
+//
+// 'htmlFindFile()' - Find a file in the document.
+//
+
+tree_t *				// O - Node for file
+htmlFindFile(tree_t *doc,		// I - Document pointer
+             uchar  *filename)		// I - Filename
+{
+  tree_t	*tree;			// Current node
+  uchar		*treename;		// Filename from node
+
+
+  for (tree = doc; tree; tree = tree->next)
+    if ((treename = htmlGetVariable(tree, (uchar *)"_HD_FILENAME")) != NULL &&
+        !strcmp((char *)treename, (char *)filename))
+      return (tree);
+
+  return (NULL);
+}
+
+
+//
+// 'htmlFixLinks()' - Fix the external links in the document.
+//
+
+void
+htmlFixLinks(tree_t *doc,		// I - Top node
+             tree_t *tree,		// I - Current node
+	     uchar  *base)		// I - Base directory/path
+{
+  uchar	*href;				// HREF attribute
+  char	full_href[1024];		// Full HREF value
+
+
+  while (tree)
+  {
+    if (tree->markup == MARKUP_A && base && base[0] &&
+        (href = htmlGetVariable(tree, (uchar *)"HREF")) != NULL)
+    {
+      // Check if the link needs to be localized...
+      if (href[0] != '#' && file_method((char *)href) == NULL &&
+          file_method((char *)base) != NULL &&
+	  htmlFindFile(doc, (uchar *)file_basename((char *)href)) == NULL)
+      {
+        // Yes, localize it...
+	if (href[0] == '/')
+	{
+	  // Absolute URL, just copy scheme, server, etc.
+	  char *ptr;			// Pointer into URL...
+
+	  strlcpy(full_href, (char *)base, sizeof(full_href));
+
+          if (href[1] == '/')
+	  {
+	    // Just use scheme...
+	    if ((ptr = strstr(full_href, "//")) != NULL)
+	      *ptr ='\0';
+	  }
+	  else if ((ptr = strstr(full_href, "//")) != NULL  &&
+	           (ptr = strchr(ptr + 2, '/')) != NULL)
+	    *ptr ='\0';
+
+	  strlcat(full_href, (char *)href, sizeof(full_href));
+	}
+	else
+	{
+	  // Relative URL, append href to base to form full href...
+	  snprintf(full_href, sizeof(full_href), "%s/%s", base, href);
+	}
+
+        fprintf(stderr, "DEBUG: Mapping \"%s\" to \"%s\"...\n", href, full_href);
+
+	htmlSetVariable(tree, (uchar *)"_HD_FULL_HREF", (uchar *)full_href);
+      }
+      else
+      {
+        // No, just mirror the link in the _HD_FULL_HREF attribute...
+	htmlSetVariable(tree, (uchar *)"_HD_FULL_HREF", href);
+      }
+    }
+    else if (tree->markup == MARKUP_FILE)
+      base = htmlGetVariable(tree, (uchar *)"_HD_BASE");
+
+    if (tree->child)
+      htmlFixLinks(doc, tree->child, base);
+
+    tree = tree->next;
+  }
+}
+
+
 /*
- * End of "$Id: htmllib.cxx,v 1.41.2.70 2004/03/02 15:39:51 mike Exp $".
+ * End of "$Id: htmllib.cxx,v 1.41.2.71 2004/04/15 19:58:20 mike Exp $".
  */
